--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -207,6 +207,7 @@
     "@mongodb-js/compass-find-in-page": "^4.35.6",
     "@mongodb-js/compass-generative-ai": "^0.30.6",
     "@mongodb-js/compass-global-writes": "^1.9.6",
+    "@mongodb-js/compass-schema-vizualization": "^1.0.0",
     "@mongodb-js/compass-import-export": "^7.49.6",
     "@mongodb-js/compass-indexes": "^5.49.6",
     "@mongodb-js/compass-intercom": "^0.17.6",
