--- a/packages/compass-schema-vizualization/package.json
+++ b/packages/compass-schema-vizualization/package.json
@@ -50,7 +50,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.6",
