--- a/packages/compass-schema-vizualization/package.json
+++ b/packages/compass-schema-vizualization/package.json
@@ -49,9 +49,12 @@
     "reformat": "npm run eslint . -- --fix && npm run prettier -- --write ."
   },
   "dependencies": {
+    "d3-path": "^3.1.0",
+    "elkjs": "^0.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.6",
