chore(configs): re-export eslint and prettier clis through config packages

--- a/configs/eslint-config-compass/package.json
+++ b/configs/eslint-config-compass/package.json
@@ -4,8 +4,12 @@
   "description": "Shared Compass eslint configuration",
   "license": "SSPL",
   "main": "index.js",
+  "bin": {
+    "eslint-compass": "./bin/eslint.js"
+  },
   "files": [
     "index.js",
+    "bin",
     "package.json",
     "README.md"
   ],
