--- a/configs/mocha-config-compass/package.json
+++ b/configs/mocha-config-compass/package.json
@@ -5,11 +5,10 @@
   "license": "SSPL",
   "main": "index.js",
   "devDependencies": {
-    "@mongodb-js/prettier-config-compass": "^1.2.6",
-    "prettier": "^2.7.1"
+    "@mongodb-js/prettier-config-compass": "^1.2.6"
   },
   "scripts": {
-    "prettier": "prettier",
+    "prettier": "prettier-compass",
     "lint": "npm run prettier --  --check .",
     "check": "npm run lint",
     "check-ci": "npm run lint",
