--- a/packages/compass-aggregations/package.json
+++ b/packages/compass-aggregations/package.json
@@ -17,7 +17,7 @@
     "compile": "tsc -p tsconfig.json",
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
-    "eslint": "eslint",
+    "eslint": "eslint-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
     "check-ci": "npm run check",
@@ -27,7 +27,7 @@
     "test-watch": "npm run test -- --watch",
     "test-ci": "npm run test-cov",
     "test-ci-electron": "npm run test-electron",
-    "prettier": "prettier",
+    "prettier": "prettier-compass",
     "reformat": "npm run eslint . -- --fix && npm run prettier -- --write ."
   },
   "license": "SSPL",
@@ -45,10 +45,8 @@
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
     "enzyme": "^3.11.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
     "react-dom": "^17.0.2",
     "sinon": "^9.2.3",
     "typescript": "^5.0.4",
