--- a/packages/compass-generative-ai/package.json
+++ b/packages/compass-generative-ai/package.json
@@ -37,8 +37,8 @@
     "compile": "tsc -p tsconfig.json",
     "start": "npm run webpack serve -- --mode development",
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -83,11 +83,9 @@
     "chai": "^4.3.6",
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "p-queue": "^7.4.1",
-    "prettier": "^2.7.1",
     "sinon": "^9.2.3",
     "typescript": "^5.0.4",
     "xvfb-maybe": "^0.2.1"
