--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -162,8 +162,8 @@
     "download": "hadron-build download",
     "evergreen-expansions": "hadron-build info --format=yaml --flatten > expansions.yml",
     "build-info": "hadron-build info",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "depcheck",
     "test-ci-electron": "npm run test-electron",
@@ -253,7 +253,6 @@
     "electron-mocha": "^12.2.0",
     "electron-squirrel-startup": "^1.0.1",
     "ensure-error": "^3.0.1",
-    "eslint": "^7.25.0",
     "glob": "^10.2.5",
     "local-links": "^1.4.0",
     "make-fetch-happen": "^10.2.1",
