--- a/packages/data-service/package.json
+++ b/packages/data-service/package.json
@@ -37,8 +37,8 @@
     "precompile": "npm run clean",
     "compile": "tsc -p tsconfig.json",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "check": "npm run lint && npm run depcheck",
     "check-ci": "npm run check",
@@ -75,12 +75,10 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "depcheck": "^1.4.1",
-    "eslint": "^7.25.0",
     "kerberos": "^2.2.1",
     "mocha": "^10.2.0",
     "mongodb-log-writer": "^2.3.4",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
     "sinon": "^9.2.3",
     "socks": "^2.7.3",
     "typescript": "^5.0.4"
