--- a/configs/eslint-config-compass/package.json
+++ b/configs/eslint-config-compass/package.json
@@ -13,9 +13,6 @@
     "package.json",
     "README.md"
   ],
-  "peerDependencies": {
-    "eslint": "^7.25.0"
-  },
   "dependencies": {
     "@babel/core": "^7.21.4",
     "@babel/eslint-parser": "^7.14.3",
@@ -23,15 +20,13 @@
     "@mongodb-js/eslint-plugin-compass": "^1.2.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-filename-rules": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.7.1"
   },
   "scripts": {
     "check": "npm run lint",
