--- a/configs/webpack-config-compass/package.json
+++ b/configs/webpack-config-compass/package.json
@@ -36,8 +36,8 @@
     "prepublishOnly": "npm run compile && compass-scripts check-exports-exist",
     "compile": "tsc -p tsconfig.json",
     "postcompile": "gen-esm-wrapper . ./dist/.esm-wrapper.mjs",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "depcheck",
     "check": "npm run lint && npm run depcheck",
@@ -52,8 +52,6 @@
     "@types/html-webpack-plugin": "^3.2.9",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "depcheck": "^1.4.1",
-    "eslint": "^7.25.0",
-    "prettier": "^2.7.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
