--- a/packages/compass-collection/package.json
+++ b/packages/compass-collection/package.json
@@ -32,8 +32,8 @@
   "scripts": {
     "bootstrap": "npm run compile",
     "compile": "tsc -p tsconfig.json",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -80,10 +80,8 @@
     "chai": "^4.3.6",
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
     "react-dom": "^17.0.2",
     "sinon": "^9.2.3",
     "typescript": "^5.0.4",
