--- a/packages/compass-components/package.json
+++ b/packages/compass-components/package.json
@@ -18,8 +18,8 @@
     "clean": "node -e \"fs.rmSync('lib', { recursive: true, force: true })\" || true",
     "precompile": "npm run clean",
     "compile": "tsc -p tsconfig.json",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run lint && npm run depcheck",
@@ -102,10 +102,8 @@
     "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.5",
     "chai": "^4.3.4",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
     "react-dom": "^17.0.2",
     "sinon": "^9.0.0",
     "typescript": "^5.0.4"
