--- a/packages/compass-connections/package.json
+++ b/packages/compass-connections/package.json
@@ -36,8 +36,8 @@
     "prepublishOnly": "npm run compile && compass-scripts check-exports-exist",
     "compile": "tsc -p tsconfig.json",
     "precompile": "node -e \"fs.rmSync('dist', { recursive: true, force: true })\" || true",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run lint && npm run depcheck",
@@ -86,10 +86,8 @@
     "chai": "^4.3.4",
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
     "react-dom": "^17.0.2",
     "sinon": "^9.2.3",
     "xvfb-maybe": "^0.2.1"
