--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -33,8 +33,8 @@
     "bootstrap": "npm run compile",
     "compile": "tsc -p tsconfig.json",
     "typecheck": "tsc --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -62,7 +62,6 @@
     "electron": "^32.3.3",
     "electron-mocha": "^12.2.0",
     "enzyme": "^3.11.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "mongodb-instance-model": "^12.26.6",
     "nyc": "^15.1.0",
