--- a/packages/compass-editor/package.json
+++ b/packages/compass-editor/package.json
@@ -33,8 +33,8 @@
     "prepublishOnly": "npm run compile && compass-scripts check-exports-exist",
     "compile": "tsc -p tsconfig.json",
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -56,7 +56,6 @@
     "@types/sinon-chai": "^3.2.5",
     "chai": "^4.3.6",
     "depcheck": "^1.4.1",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.3",
@@ -76,7 +75,6 @@
     "@mongodb-js/mongodb-constants": "^0.11.0",
     "mongodb-query-parser": "^4.3.0",
     "polished": "^4.2.2",
-    "prettier": "^2.7.1",
     "react": "^17.0.2"
   }
 }
