--- a/packages/compass-query-bar/package.json
+++ b/packages/compass-query-bar/package.json
@@ -33,8 +33,8 @@
     "bootstrap": "npm run compile",
     "compile": "tsc -p tsconfig.json",
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -57,7 +57,6 @@
     "depcheck": "^1.4.1",
     "electron": "^32.3.3",
     "electron-mocha": "^12.2.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "react-dom": "^17.0.2",
