--- a/packages/compass-serverstats/package.json
+++ b/packages/compass-serverstats/package.json
@@ -19,8 +19,8 @@
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
     "check-ci": "npm run check",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "test-ci": "npm run test",
@@ -56,7 +56,6 @@
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
     "enzyme": "^3.11.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "react-dom": "^17.0.2",
     "typescript": "^5.0.4",
