--- a/packages/compass-shell/package.json
+++ b/packages/compass-shell/package.json
@@ -34,8 +34,8 @@
     "compile": "tsc -p tsconfig.json",
     "start": "npm run webpack serve -- --mode development",
     "typecheck": "tsc --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -80,7 +80,6 @@
     "electron": "^32.3.3",
     "electron-mocha": "^12.2.0",
     "enzyme": "^3.11.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "react-dom": "^17.0.2",
