--- a/packages/compass-web/package.json
+++ b/packages/compass-web/package.json
@@ -46,8 +46,8 @@
     "watch": "npm run webpack -- --mode development --watch",
     "sync": "node scripts/sync-dist-to-mms.js",
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -110,7 +110,6 @@
     "depcheck": "^1.4.1",
     "dns-query": "^0.11.2",
     "electron": "^32.3.3",
-    "eslint": "^7.25.0",
     "events": "^3.3.0",
     "express": "^4.21.1",
     "express-http-proxy": "^2.0.0",
@@ -125,7 +124,6 @@
     "nyc": "^15.1.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "prettier": "^2.7.1",
     "process": "^0.11.10",
     "readable-stream": "^4.5.0",
     "sinon": "^17.0.1",
