--- a/packages/connection-form/package.json
+++ b/packages/connection-form/package.json
@@ -33,8 +33,8 @@
     "prepublishOnly": "npm run compile && compass-scripts check-exports-exist",
     "compile": "tsc -p tsconfig.json",
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -75,10 +75,8 @@
     "chai": "^4.3.4",
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
-    "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
     "sinon": "^9.2.3",
     "xvfb-maybe": "^0.2.1"
   }
