--- a/packages/hadron-app-registry/package.json
+++ b/packages/hadron-app-registry/package.json
@@ -30,8 +30,8 @@
     "bootstrap": "npm run compile",
     "prepublishOnly": "npm run compile && compass-scripts check-exports-exist",
     "compile": "tsc -p tsconfig.json && gen-esm-wrapper . ./dist/.esm-wrapper.mjs",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run lint && npm run depcheck",
@@ -60,10 +60,8 @@
     "@types/reflux": "^6.4.3",
     "chai": "^4.1.2",
     "depcheck": "^1.4.1",
-    "eslint": "^7.25.0",
     "eslint-config-mongodb-js": "^5.0.3",
     "mocha": "^10.2.0",
-    "prettier": "^2.7.1",
     "sinon": "^9.0.0",
     "typescript": "^5.0.4"
   }
