--- a/packages/reflux-state-mixin/package.json
+++ b/packages/reflux-state-mixin/package.json
@@ -37,8 +37,8 @@
     "prepublishOnly": "npm run compile && compass-scripts check-exports-exist",
     "compile": "tsc -p tsconfig.json && gen-esm-wrapper . ./dist/.esm-wrapper.mjs",
     "typecheck": "tsc -p tsconfig-lint.json --noEmit",
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
@@ -59,11 +59,9 @@
     "@mongodb-js/tsconfig-compass": "^1.2.6",
     "@types/mocha": "^9.0.0",
     "depcheck": "^1.4.1",
-    "eslint": "^7.25.0",
     "gen-esm-wrapper": "^1.1.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
     "typescript": "^5.0.4"
   }
 }
