--- a/scripts/package.json
+++ b/scripts/package.json
@@ -21,8 +21,8 @@
   },
   "license": "SSPL",
   "scripts": {
-    "eslint": "eslint",
-    "prettier": "prettier",
+    "eslint": "eslint-compass",
+    "prettier": "prettier-compass",
     "lint": "npm run eslint . && npm run prettier -- --check .",
     "depcheck": "depcheck",
     "check": "npm run lint && npm run depcheck",
@@ -33,9 +33,7 @@
     "@mongodb-js/eslint-config-compass": "^1.3.6",
     "@mongodb-js/prettier-config-compass": "^1.2.6",
     "@mongodb-js/tsconfig-compass": "^1.2.6",
-    "depcheck": "^1.4.1",
-    "eslint": "^7.25.0",
-    "prettier": "^2.7.1"
+    "depcheck": "^1.4.1"
   },
   "dependencies": {
     "@babel/core": "^7.24.3",
