--- a/configs/eslint-config-compass/package.json
+++ b/configs/eslint-config-compass/package.json
@@ -29,9 +29,10 @@
     "eslint-plugin-react-hooks": "^4.2.0"
   },
   "scripts": {
+    "prettier": "prettier-compass",
     "check": "npm run lint",
-    "lint": "prettier --check .",
-    "reformat": "prettier --write ."
+    "lint": "npm run prettier -- --check .",
+    "reformat": "npm run prettier -- --write ."
   },
   "repository": {
     "type": "git",
