--- a/configs/prettier-config-compass/package.json
+++ b/configs/prettier-config-compass/package.json
@@ -14,9 +14,10 @@
     "@mongodb-js/prettier-config-devtools": "^1.0.1"
   },
   "scripts": {
+    "prettier": "prettier-compass",
     "check": "npm run lint",
-    "lint": "prettier --check .",
-    "reformat": "prettier --write ."
+    "lint": "npm run prettier -- --check .",
+    "reformat": "npm run prettier -- --write ."
   },
   "repository": {
     "type": "git",
