fix(ci): don't allow empty commits in update generated files task; skip task when previous commit was also generated by it

--- a/.github/workflows/authors-and-third-party-notices.yaml
+++ b/.github/workflows/authors-and-third-party-notices.yaml
@@ -13,6 +13,9 @@ permissions:
 
 jobs:
   update_generated_files:
+    if: |
+      github.event_name == "schedule" ||
+      !startsWith(github.event.head_commit.message, "chore: update AUTHORS, THIRD-PARTY-NOTICES, Security Test Summary")
     name: Update automatically generated files
     runs-on: ubuntu-latest
     env:
@@ -69,7 +72,17 @@ jobs:
           npm run update-tracking-plan
           git add docs/tracking-plan.md
 
-      # - name: Commit and push
-      #   run: |
-      #     git commit --no-allow-empty -m "chore: update AUTHORS, THIRD-PARTY-NOTICES, Security Test Summary" || true
-      #     git push
+      - name: Commit and push
+        run: |
+          # We can't rely on git not allowing empty commits by default: the
+          # empty commit check happens before the pre-commit hooks run and if
+          # there is no diff exists after precommit logic was executed, empty
+          # commit will still be generated. Instead of that we will allow empty
+          # commit to happen and will check it directly if it's empty or not
+          git commit --allow-empty -m "chore: update AUTHORS, THIRD-PARTY-NOTICES, Security Test Summary"
+          if [ $(git diff-tree --name-only --no-commit-id HEAD | wc -l) -gt 0 ]; then
+            echo "Files changed, pushing update..."
+            git push
+          else
+            echo "No changes to push"
+          fi
