--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "update-authors": "node scripts/generate-authors.js",
     "preupdate-third-party-notices": "npm run -w packages/compass compile",
     "update-third-party-notices": "cp packages/compass/THIRD-PARTY-NOTICES.md .",
+    "postupdate-third-party-notices": "npx prettier-compass THIRD-PARTY-NOTICES.md --write",
     "update-tracking-plan": "npx ts-node scripts/generate-tracking-plan.ts > docs/tracking-plan.md",
+    "postupdate-tracking-plan": "npx prettier-compass docs/tracking-plan.md --write",
     "bump-packages": "bump-monorepo-packages",
     "publish-packages": "lerna publish from-package --no-verify-access --no-push --no-git-tag-version --yes",
     "version": "node ./scripts/align-monorepo-dependencies.js --no-commit",
@@ -50,6 +52,7 @@
     "update-evergreen-config": "node .evergreen/template-yml.js",
     "postupdate-evergreen-config": "evergreen validate .evergreen.yml",
     "update-security-test-summary": "ts-node scripts/generate-security-test-summary.ts > docs/security-test-summary.md",
+    "postupdate-security-test-summary": "npx prettier-compass docs/security-test-summary.md --write",
     "prepare": "husky install",
     "snyk-test": "node scripts/snyk-test.js",
     "pregenerate-vulnerability-report": "npm run compile -w packages/compass && npm run snyk-test",
