--- a/packages/compass-app-stores/package.json
+++ b/packages/compass-app-stores/package.json
@@ -79,6 +79,7 @@
     "mongodb-collection-model": "^5.25.8",
     "mongodb-database-model": "^2.25.8",
     "mongodb-instance-model": "^12.26.8",
+    "compass-preferences-model": "^2.33.8",
     "mongodb-ns": "^2.4.2",
     "react": "^17.0.2"
   },
