--- a/packages/compass-workspaces/package.json
+++ b/packages/compass-workspaces/package.json
@@ -57,6 +57,7 @@
     "@mongodb-js/compass-logging": "^1.6.8",
     "bson": "^6.10.3",
     "hadron-app-registry": "^9.4.8",
+    "compass-preferences-model": "^2.33.8",
     "lodash": "^4.17.21",
     "mongodb-collection-model": "^5.25.8",
     "mongodb-database-model": "^2.25.8",
