--- a/packages/instance-model/package.json
+++ b/packages/instance-model/package.json
@@ -31,7 +31,8 @@
     "ampersand-model": "^8.0.1",
     "mongodb-collection-model": "^5.25.8",
     "mongodb-data-service": "^22.25.8",
-    "mongodb-database-model": "^2.25.8"
+    "mongodb-database-model": "^2.25.8",
+    "compass-preferences-model": "^2.33.8"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.8",
