--- a/.github/workflows/bump-packages.yaml
+++ b/.github/workflows/bump-packages.yaml
@@ -24,6 +24,9 @@ jobs:
         with:
           # don't checkout a detatched HEAD
           ref: ${{ github.head_ref }}
+          # this is important so git log can pick up on the whole history to
+          # find last publish commit
+          fetch-depth: '0'
           token: ${{ steps.app-token.outputs.token }}
 
       - uses: actions/setup-node@v4
