--- a/packages/compass-preferences-model/package.json
+++ b/packages/compass-preferences-model/package.json
@@ -52,6 +52,7 @@
     "@mongodb-js/compass-logging": "^1.6.8",
     "@mongodb-js/compass-user-data": "^0.5.8",
     "@mongodb-js/devtools-proxy-support": "^0.4.2",
+    "@mongodb-js/compass-components": "^1.34.7",
     "bson": "^6.10.3",
     "hadron-app-registry": "^9.4.8",
     "hadron-ipc": "^3.4.8",
