--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -191,7 +191,6 @@
   "devDependencies": {
     "@electron/rebuild": "^3.7.2",
     "@electron/remote": "^2.1.2",
-    "@types/minimatch": "^5.1.2",
     "@mongodb-js/atlas-service": "^0.35.8",
     "@mongodb-js/compass-aggregations": "^9.52.8",
     "@mongodb-js/compass-app-stores": "^7.36.8",
@@ -200,6 +199,7 @@
     "@mongodb-js/compass-connection-import-export": "^0.46.8",
     "@mongodb-js/compass-connections": "^1.50.8",
     "@mongodb-js/compass-crud": "^13.50.8",
+    "@mongodb-js/compass-data-modeling": "^1.0.0",
     "@mongodb-js/compass-databases-collections": "^1.49.8",
     "@mongodb-js/compass-explain-plan": "^6.50.8",
     "@mongodb-js/compass-export-to-language": "^9.26.8",
@@ -238,6 +238,7 @@
     "@mongodb-js/tsconfig-compass": "^1.2.8",
     "@mongodb-js/webpack-config-compass": "^1.6.8",
     "@segment/analytics-node": "^1.1.4",
+    "@types/minimatch": "^5.1.2",
     "ampersand-view": "^9.0.0",
     "bson": "^6.10.3",
     "chai": "^4.3.4",
@@ -253,12 +254,12 @@
     "electron-mocha": "^12.2.0",
     "ensure-error": "^3.0.1",
     "glob": "^10.2.5",
-    "local-links": "^1.4.0",
-    "make-fetch-happen": "^10.2.1",
-    "marky": "^1.2.1",
     "hadron-app-registry": "^9.4.8",
     "hadron-build": "^25.7.9",
     "hadron-ipc": "^3.4.8",
+    "local-links": "^1.4.0",
+    "make-fetch-happen": "^10.2.1",
+    "marky": "^1.2.1",
     "minimatch": "^10.0.1",
     "mongodb": "^6.14.1",
     "mongodb-build-info": "^1.7.2",
