--- a/packages/compass-data-modeling/package.json
+++ b/packages/compass-data-modeling/package.json
@@ -26,13 +26,13 @@
     ".": "./dist/index.js",
     "./provider": "./dist/provider/index.js",
     "./renderer": "./dist/services/data-model-storage-electron.js",
-    "./web": "./dist/services/data-model-storage-web.js"
+    "./web": "./dist/services/data-model-storage-in-memory.js"
   },
   "compass:exports": {
     ".": "./src/index.ts",
-    "./provider": "./src/provider/index.ts",
-    "./renderer": "./src/services/data-model-storage-electron.ts",
-    "./web": "./src/services/data-model-storage-web.ts"
+    "./provider": "./src/provider/index.tsx",
+    "./renderer": "./src/services/data-model-storage-electron.tsx",
+    "./web": "./src/services/data-model-storage-in-memory.tsx"
   },
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -54,12 +54,20 @@
     "reformat": "npm run eslint . -- --fix && npm run prettier -- --write ."
   },
   "dependencies": {
+    "@mongodb-js/compass-app-stores": "^7.36.8",
+    "@mongodb-js/compass-components": "^1.34.8",
     "@mongodb-js/compass-connections": "^1.52.0",
+    "@mongodb-js/compass-editor": "^0.37.1",
     "@mongodb-js/compass-logging": "^1.6.8",
     "@mongodb-js/compass-telemetry": "^1.5.0",
+    "@mongodb-js/compass-user-data": "^0.5.8",
     "@mongodb-js/compass-workspaces": "^0.33.0",
+    "bson": "^6.10.3",
     "compass-preferences-model": "^2.34.0",
     "hadron-app-registry": "^9.4.8",
+    "lodash": "^4.17.21",
+    "mongodb-ns": "^2.4.2",
+    "mongodb-schema": "^12.5.2",
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
