--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -185,6 +185,7 @@
     "kerberos": "^2.2.1",
     "keytar": "^7.9.0",
     "mongodb-client-encryption": "^6.3.0",
+    "native-machine-id": "^0.1.1",
     "os-dns-native": "^1.2.1",
     "system-ca": "^2.0.0"
   },
