--- a/packages/compass-indexes/package.json
+++ b/packages/compass-indexes/package.json
@@ -91,7 +91,8 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "semver": "^7.6.2"
+    "semver": "^7.6.2",
+    "mongodb-mql-engines": "^0.0.4"
   },
   "is_compass_plugin": true
 }
