--- a/packages/compass-indexes/package.json
+++ b/packages/compass-indexes/package.json
@@ -84,6 +84,7 @@
     "mongodb": "^6.14.1",
     "mongodb-collection-model": "^5.25.8",
     "mongodb-data-service": "^22.25.8",
+    "mongodb-mql-engines": "^0.0.4",
     "mongodb-query-parser": "^4.3.0",
     "mongodb-ns": "^2.4.2",
     "numeral": "^2.0.6",
@@ -91,8 +92,7 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "semver": "^7.6.2",
-    "mongodb-mql-engines": "^0.0.4"
+    "semver": "^7.6.2"
   },
   "is_compass_plugin": true
 }
