--- a/packages/compass-data-modeling/package.json
+++ b/packages/compass-data-modeling/package.json
@@ -66,6 +66,7 @@
     "compass-preferences-model": "^2.35.0",
     "hadron-app-registry": "^9.4.8",
     "lodash": "^4.17.21",
+    "mongodb": "^6.14.1",
     "mongodb-ns": "^2.4.2",
     "mongodb-schema": "^12.5.2",
     "react": "^17.0.2",
