--- a/packages/compass/.depcheckrc
+++ b/packages/compass/.depcheckrc
@@ -7,6 +7,7 @@ ignores: [
     'kerberos',
     'keytar',
     'os-dns-native',
+    'native-machine-id',
     'system-ca',
     'win-export-certificate-and-key',
     'macos-export-certificate-and-key',
