--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -131,6 +131,7 @@
           "keytar",
           "kerberos",
           "os-dns-native",
+          "native-machine-id",
           "win-export-certificate-and-key",
           "macos-export-certificate-and-key"
         ]
@@ -180,11 +181,13 @@
     "email": "compass@mongodb.com"
   },
   "dependencies": {
+    "@mongodb-js/device-id": "^0.2.0",
     "@mongosh/node-runtime-worker-thread": "^3.3.8",
     "clipboard": "^2.0.6",
     "kerberos": "^2.2.1",
     "keytar": "^7.9.0",
     "mongodb-client-encryption": "^6.3.0",
+    "native-machine-id": "^0.1.1",
     "os-dns-native": "^1.2.1",
     "system-ca": "^2.0.0"
   },
