--- a/packages/compass-indexes/package.json
+++ b/packages/compass-indexes/package.json
@@ -84,6 +84,7 @@
     "mongodb": "^6.16.0",
     "mongodb-collection-model": "^5.26.0",
     "mongodb-data-service": "^22.25.8",
+    "mongodb-mql-engines": "^0.0.4",
     "mongodb-query-parser": "^4.3.0",
     "mongodb-ns": "^2.4.2",
     "numeral": "^2.0.6",
