--- a/packages/compass-components/package.json
+++ b/packages/compass-components/package.json
@@ -39,6 +39,7 @@
     "@leafygreen-ui/button": "^22.0.2",
     "@leafygreen-ui/card": "^12.0.2",
     "@leafygreen-ui/checkbox": "^14.0.2",
+    "@leafygreen-ui/chip": "^3.0.12",
     "@leafygreen-ui/code": "^16.0.2",
     "@leafygreen-ui/combobox": "^11.0.2",
     "@leafygreen-ui/confirmation-modal": "^6.0.2",
