--- a/configs/storybook/package.json
+++ b/configs/storybook/package.json
@@ -8,6 +8,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@mongodb-js/compass-components": "^1.36.0",
     "@storybook/addon-a11y": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
@@ -16,13 +17,13 @@
     "@storybook/blocks": "^7.6.17",
     "@storybook/react-webpack5": "^7.6.17",
     "@storybook/testing-library": "^0.2.2",
-    "storybook": "^7.6.17",
-    "ts-loader": "^9.5.1",
     "buffer": "^6.0.3",
-    "stream-browserify": "^3.0.0",
     "crypto-browserify": "^3.12.0",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "os-browserify": "^0.3.0"
+    "storybook": "^7.6.17",
+    "stream-browserify": "^3.0.0",
+    "ts-loader": "^9.5.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
