--- a/packages/compass-explain-plan/package.json
+++ b/packages/compass-explain-plan/package.json
@@ -82,10 +82,13 @@
     "hadron-app-registry": "^9.4.8",
     "lodash": "^4.17.21",
     "mongodb": "^6.16.0",
+    "mongodb-query-parser": "^4.3.0",
     "react": "^17.0.2",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "remark-gfm": "^3.0.1"
   },
   "is_compass_plugin": true
 }
