--- a/packages/compass-generative-ai/package.json
+++ b/packages/compass-generative-ai/package.json
@@ -62,7 +62,9 @@
     "compass-preferences-model": "^2.37.0",
     "hadron-app-registry": "^9.4.8",
     "mongodb": "^6.16.0",
+    "mongodb-rag-core": "^0.7.0",
     "mongodb-schema": "^12.5.2",
+    "openai": "^4.98.0",
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
