--- a/packages/compass-query-bar/package.json
+++ b/packages/compass-query-bar/package.json
@@ -87,7 +87,9 @@
     "mongodb-query-parser": "^4.3.0",
     "mongodb-query-util": "^2.4.8",
     "mongodb-schema": "^12.5.2",
+    "openai": "^4.98.0",
     "react": "^17.0.2",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
