--- a/packages/compass-schema/package.json
+++ b/packages/compass-schema/package.json
@@ -97,9 +97,11 @@
     "react": "^17.0.2",
     "react-leaflet": "^2.4.0",
     "react-leaflet-draw": "^0.19.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "remark-gfm": "^3.0.1"
   },
   "is_compass_plugin": true
 }
