--- a/.github/workflows/update-electron.yaml
+++ b/.github/workflows/update-electron.yaml
@@ -4,7 +4,7 @@ name: Update electron
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
 
 permissions:
   contents: none # We use the github app token to push the changes
@@ -29,8 +29,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.16.0
-          cache: "npm"
+          node-version: 22.11.0
+          cache: 'npm'
 
       - name: Install npm@10.2.4
         run: |
@@ -46,10 +46,10 @@ jobs:
         uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f # 7.0.5
         with:
           token: ${{ steps.app-token.outputs.token }}
-          commit-message: "chore(deps): update electron"
+          commit-message: 'chore(deps): update electron'
           branch: ci/update-electron
-          title: "chore(deps): update electron"
+          title: 'chore(deps): update electron'
           labels: no-title-validation
-          author: "${{ steps.app-token.outputs.app-slug}}[bot] <${{ steps.app-token.outputs.app-email }}>"
+          author: '${{ steps.app-token.outputs.app-slug}}[bot] <${{ steps.app-token.outputs.app-email }}>'
           body: |
             - Update electron
