--- a/packages/compass-vector-embedding-visualizer/package.json
+++ b/packages/compass-vector-embedding-visualizer/package.json
@@ -55,7 +55,8 @@
     "mongodb": "^6.16.0",
     "plotly.js": "^3.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "voyageai": "^0.0.4"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.8",
