--- a/packages/compass-vector-embedding-visualizer/package.json
+++ b/packages/compass-vector-embedding-visualizer/package.json
@@ -52,9 +52,11 @@
     "@leafygreen-ui/tooltip": "^13.0.12",
     "@types/plotly.js": "^3.0.0",
     "ml-pca": "^4.1.1",
+    "mongodb": "^6.16.0",
     "plotly.js": "^3.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "voyageai": "^0.0.4"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.8",
@@ -65,6 +67,7 @@
     "@types/chai": "^4.2.21",
     "@types/chai-dom": "^0.0.10",
     "@types/mocha": "^9.0.0",
+    "@types/mongodb": "^4.0.6",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.10",
     "@types/sinon-chai": "^3.2.5",
@@ -74,7 +77,7 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "sinon": "^17.0.1",
-    "typescript": "^5.0.4",
+    "typescript": "^5.8.3",
     "xvfb-maybe": "^0.2.1"
   },
   "is_compass_plugin": true
