--- a/packages/compass-data-modeling/package.json
+++ b/packages/compass-data-modeling/package.json
@@ -93,7 +93,8 @@
     "react-dom": "^17.0.2",
     "sinon": "^17.0.1",
     "typescript": "^5.0.4",
-    "xvfb-maybe": "^0.2.1"
+    "xvfb-maybe": "^0.2.1",
+    "zod": "^3.25.1"
   },
   "is_compass_plugin": true
 }
