--- a/packages/compass-data-modeling/package.json
+++ b/packages/compass-data-modeling/package.json
@@ -72,7 +72,8 @@
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "zod": "^3.25.1"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.8",
@@ -93,8 +94,7 @@
     "react-dom": "^17.0.2",
     "sinon": "^17.0.1",
     "typescript": "^5.0.4",
-    "xvfb-maybe": "^0.2.1",
-    "zod": "^3.25.1"
+    "xvfb-maybe": "^0.2.1"
   },
   "is_compass_plugin": true
 }
