--- a/.github/workflows/publish-packages.yaml
+++ b/.github/workflows/publish-packages.yaml
@@ -34,7 +34,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
 
-      - name: 'Use Node.js 20'
+      - name: 'Use Node.js'
         uses: actions/setup-node@v4
         with:
           node-version: 22.15.1
