--- a/.github/workflows/publish-packages.yaml
+++ b/.github/workflows/publish-packages.yaml
@@ -27,17 +27,17 @@ jobs:
           ref: ${{ github.head_ref }}
 
           # this is important so git log has the whole history
-          fetch-depth: "0"
+          fetch-depth: '0'
 
       - name: Setup git
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
 
-      - name: "Use Node.js 20"
+      - name: 'Use Node.js'
         uses: actions/setup-node@v4
         with:
-          node-version: 20.16.0
+          node-version: 22.15.1
 
       - name: Install npm@10.2.4
         run: npm install -g npm@10.2.4
@@ -47,7 +47,7 @@ jobs:
           npm run bootstrap-ci
         shell: bash
 
-      - name: "Publish what is not already in NPM"
+      - name: 'Publish what is not already in NPM'
         env:
           NPM_TOKEN: ${{ secrets.DEVTOOLSBOT_NPM_TOKEN }}
         run: |
@@ -57,7 +57,7 @@ jobs:
           git update-index --assume-unchanged .npmrc
           npm run publish-packages
 
-      - name: "Publish tags"
+      - name: 'Publish tags'
         run: |
           npx lerna list --json | \
             jq -r '.[] | .name + "@" + .version' | \
