--- a/packages/compass-data-modeling/package.json
+++ b/packages/compass-data-modeling/package.json
@@ -72,8 +72,7 @@
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "zod": "^3.24.4"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.8",
