chore(compass-web): do not expose internal logger details to web `onLog` hook
Instead, pass the processed log contents to it.

--- a/packages/compass-web/tsconfig.json
+++ b/packages/compass-web/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "@mongodb-js/tsconfig-compass/tsconfig.react.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "moduleResolution": "node16",
+    "module": "node16"
   },
   "include": [
     "src/**/*",
