--- a/packages/compass-app-stores/package.json
+++ b/packages/compass-app-stores/package.json
@@ -75,11 +75,13 @@
     "@mongodb-js/compass-connections": "^1.56.0",
     "@mongodb-js/compass-logging": "^1.6.9",
     "@mongodb-js/connection-info": "^0.14.0",
+    "ampersand-collection": "^2.0.2",
+    "ampersand-model": "^8.0.1",
+    "compass-preferences-model": "^2.38.0",
     "hadron-app-registry": "^9.4.9",
     "mongodb-collection-model": "^5.28.0",
     "mongodb-database-model": "^2.28.0",
     "mongodb-instance-model": "^12.30.0",
-    "compass-preferences-model": "^2.38.0",
     "mongodb-ns": "^2.4.2",
     "react": "^17.0.2"
   },
