Update test-installers workflow to use "bash"

--- a/.github/workflows/test-installers.yml
+++ b/.github/workflows/test-installers.yml
@@ -3,6 +3,11 @@ name: Test Installers
 permissions:
   contents: read
 
+# Using "bash" everywhere to make "--" separation of arguments work predictively when invoking NPM script on Windows
+defaults:
+  run:
+    shell: bash
+
 on:
   workflow_dispatch:
     inputs:
