--- a/package.json
+++ b/package.json
@@ -102,6 +102,12 @@
     },
     "chai-enzyme": {
       "cheerio": "1.0.0-rc.10"
+    },
+    "@mongodb-js/eslint-config-devtools": {
+      "eslint": "^8.57.1",
+      "eslint-plugin-jsx-a11y": "^6.10.2",
+      "eslint-plugin-react": "^7.37.5",
+      "eslint-plugin-react-hooks": "^4.6.2"
     }
   }
 }
