--- a/packages/collection-model/package.json
+++ b/packages/collection-model/package.json
@@ -23,7 +23,7 @@
     "check": "npm run lint && npm run depcheck",
     "test": "mocha",
     "test-electron": "xvfb-maybe electron-mocha --no-sandbox",
-    "lint": "eslint \"./{src,lib,test,bin}/**/*.{js,jsx,ts,tsx}\" \"./*.js\" --no-error-on-unmatched-pattern",
+    "lint": "eslint-compass \"./{src,lib,test,bin}/**/*.{js,jsx,ts,tsx}\" \"./*.js\" --no-error-on-unmatched-pattern",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "test-ci": "npm run test",
     "test-ci-electron": "npm run test-electron"
