--- a/packages/hadron-type-checker/package.json
+++ b/packages/hadron-type-checker/package.json
@@ -22,7 +22,7 @@
     "test-check-ci": "npm test",
     "test": "mocha",
     "check": "npm run lint && npm run depcheck",
-    "lint": "eslint \"./{src,lib,test,bin}/**/*.{js,jsx,ts,tsx}\" \"./*.js\" --no-error-on-unmatched-pattern",
+    "lint": "eslint-compass \"./{src,lib,test,bin}/**/*.{js,jsx,ts,tsx}\" \"./*.js\" --no-error-on-unmatched-pattern",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "test-ci": "npm run test"
   },
