--- a/packages/instance-model/package.json
+++ b/packages/instance-model/package.json
@@ -23,7 +23,7 @@
     "test-check-ci": "npm run check && npm test",
     "test": "mocha",
     "check": "npm run lint && npm run depcheck",
-    "lint": "eslint \"./{src,lib,test,bin}/**/*.{js,jsx,ts,tsx}\" \"./*.js\" --no-error-on-unmatched-pattern",
+    "lint": "eslint-compass \"./{src,lib,test,bin}/**/*.{js,jsx,ts,tsx}\" \"./*.js\" --no-error-on-unmatched-pattern",
     "depcheck": "compass-scripts check-peer-deps && depcheck",
     "test-ci": "npm run test"
   },
