fix: track usage of uuid subtype 3 vs 4 COMPASS-9359

--- a/packages/compass-components/.depcheckrc
+++ b/packages/compass-components/.depcheckrc
@@ -1,6 +1,7 @@
 ignores: [
     '@mongodb-js/prettier-config-compass',
     '@mongodb-js/tsconfig-compass',
+    '@mongodb-js/compass-telemetry',
     '@types/chai-dom',
     '@emotion/css',
   ]
