--- a/packages/compass-components/package.json
+++ b/packages/compass-components/package.json
@@ -99,6 +99,7 @@
     "@mongodb-js/prettier-config-compass": "^1.2.8",
     "@mongodb-js/testing-library-compass": "^1.3.1",
     "@mongodb-js/tsconfig-compass": "^1.2.8",
+    "@mongodb-js/compass-telemetry": "^1.7.0",
     "@types/chai": "^4.2.21",
     "@types/chai-dom": "^0.0.10",
     "@types/mocha": "^9.0.0",
